devops/k8s/kefir-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kefir-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kefir-backend
  template:
    metadata:
      labels:
        app: kefir-backend
        version: v1
    spec:
      containers:
        - name: backend
          image: nduarte93/kefir-backend:corspatch
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 90
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
