devops/k8s/kefir-backend-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kefir-backend-v1
spec:
  selector:
    app: kefir-backend
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
