devops/k8s/kefir-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kefir-frontend
spec:
  selector:
    app: kefir-frontend
  ports:
    - port: 3000
      targetPort: 80
