devops/k8s/kefir-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kefir-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: kefir.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kefir-backend-v2
                port:
                  number: 8080
